--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/native": "^6.1.6",
     "expo": "~48.0.15",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.7",
     "expo-secure-store": "~12.1.1",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
+    "react": "18.2.0",
+    "react-native": "0.71.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
